Add another test for volumes
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_volumes.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_volumes.yml
@@ -371,13 +371,26 @@
       - /tmp/data:/data:U
   register: test24
 
-- name: Check test24
+- containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    name: test24
+    image: alpine
+    state: present
+    volumes:
+      - /tmp/data:/data:U
+  register: test25
+
+- name: Check volumes with selinux relabeling
   assert:
     that:
       - test24 is changed
       - >-
         (test24.container['Config']['CreateCommand'] is defined and
         '/tmp/data:/data:U' in test24.container['Config']['CreateCommand'] | list)
+      - test25 is not changed
+      - >-
+        (test25.container['Config']['CreateCommand'] is defined and
+        '/tmp/data:/data:U' in test25.container['Config']['CreateCommand'] | list)
 
 - ansible.builtin.file:
     path: /tmp/data
