--- a/.github/workflows/podman_logout.yml
+++ b/.github/workflows/podman_logout.yml
@@ -34,13 +34,12 @@ jobs:
       fail-fast: false
       matrix:
         ansible-version:
-          - ansible<2.10
-          # - git+https://github.com/ansible/ansible.git@stable-2.11
+          - git+https://github.com/ansible/ansible.git@stable-2.18
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - ubuntu-22.04
         python-version:
-          - "3.11"
+          - "3.12"
 
     steps:
 
