Add templates based CI
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/.github/workflows/podman_pod_info.yml
+++ b/.github/workflows/podman_pod_info.yml
@@ -27,85 +27,8 @@ on:
     - cron: 4 0 * * *  # Run daily at 0:03 UTC
 
 jobs:
-
   test_podman_pod_info:
-    name: Podman pod info ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-22.04' }}
-    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
-    defaults:
-      run:
-        shell: bash
-    strategy:
-      fail-fast: false
-      matrix:
-        ansible-version:
-          - git+https://github.com/ansible/ansible.git@stable-2.18
-          - git+https://github.com/ansible/ansible.git@devel
-        os:
-          - ubuntu-22.04
-        python-version:
-          - "3.12"
-
-    steps:
-
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Upgrade pip and display Python and PIP versions
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python*-wheel python*-yaml
-          python -m pip install --upgrade pip
-          python -V
-          pip --version
-
-      - name: Set up pip cache
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ github.ref }}-units-VMs
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
-
-      - name: Install Ansible ${{ matrix.ansible-version }}
-        run: python3 -m pip install --user --force-reinstall --upgrade '${{ matrix.ansible-version }}'
-
-      - name: Build and install the collection tarball
-        run: |
-          export PATH=~/.local/bin:$PATH
-
-          echo "Run ansible version"
-          command -v ansible
-          ansible --version
-          rm -rf /tmp/just_new_collection
-          ~/.local/bin/ansible-galaxy collection build --output-path /tmp/just_new_collection --force
-          ~/.local/bin/ansible-galaxy collection install -vvv --force /tmp/just_new_collection/*.tar.gz
-
-      - name: Run collection tests for podman pod info
-        run: |
-          export PATH=~/.local/bin:$PATH
-
-          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
-          fi
-
-          echo $ANSIBLE_CONFIG
-          command -v ansible-playbook
-          pip --version
-          python --version
-          ansible-playbook --version
-
-          ansible-playbook -vv ci/playbooks/pre.yml \
-          -e host=localhost \
-          -i localhost, \
-          -e ansible_connection=local \
-          -e setup_python=false
-
-          TEST2RUN=podman_pod_info ./ci/run_containers_tests.sh
-        shell: bash
+    uses: ./.github/workflows/reusable-module-test.yml
+    with:
+      module_name: 'podman_pod_info'
+      display_name: 'Podman pod info'
