--- a/.github/workflows/build_latest_podman.yml
+++ b/.github/workflows/build_latest_podman.yml
@@ -336,7 +336,7 @@ jobs:
             -e podman_version_ubuntu=latest
 
           echo "Running podman_container tests..."
-          ADDITIONAL_PARAMS=" -e rootfs_tests=false " TEST2RUN=podman_container ./ci/run_containers_tests.sh
+          ANSIBLECMD="ansible-playbook -e rootfs_tests=false " TEST2RUN=podman_container ./ci/run_containers_tests.sh
 
   test-podman-idempotency-latest:
     name: Podman Idempotency test with latest Podman
@@ -490,7 +490,7 @@ jobs:
             -e podman_version_ubuntu=latest
 
           echo "Running podman_container tests..."
-          TEST2RUN=podman_container_idempotency ./ci/run_containers_tests.sh
+          ANSIBLECMD="ansible-playbook -e rootfs_tests=false " TEST2RUN=podman_container_idempotency ./ci/run_containers_tests.sh
 
   # notify-results:
   #   name: Notify test results
