--- a/.github/workflows/build_latest_podman.yml
+++ b/.github/workflows/build_latest_podman.yml
@@ -57,6 +57,11 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Disable apparmor
+        run: |
+          sudo systemctl stop apparmor.service
+          sudo aa-teardown || true
+
       - name: Clone and build netavark
         run: |
           git clone https://github.com/containers/netavark.git /tmp/netavark
