--- a/.github/workflows/build_latest_podman.yml
+++ b/.github/workflows/build_latest_podman.yml
@@ -266,7 +266,7 @@ jobs:
           cat > ~/.config/containers/containers.conf << EOF
 
           [engine]
-
+          runtime = "runc"
           helper_binaries_dir = ["/usr/lib/podman", "/usr/local/libexec/podman", "/usr/local/bin"]
 
           EOF
@@ -417,7 +417,7 @@ jobs:
           cat > ~/.config/containers/containers.conf << EOF
 
           [engine]
-
+          runtime = "runc"
           helper_binaries_dir = ["/usr/lib/podman", "/usr/local/libexec/podman", "/usr/local/bin"]
 
           EOF
